# Pong

./: .gitignore  Audio.flp  Ball.cpp  Ball.hh  Build.ps1  CMakeLists.txt  Main.cpp  Opponent.cpp  Opponent.hh  Player.cpp  Player.hh  README.md  Run.ps1
Application/: Main.cpp
Include/: Ball.hh  Game.hh  Opponent.hh  Player.hh
Resources/: Audio.flp
Scripts/: Build.ps1  Clean.ps1  ReleaseScript.ps1  Run.ps1
Source/: Ball.cpp  Game.cpp  Opponent.cpp  Player.cpp
